# fi-resolve

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
config/: check_debug.m4  check_libfabric.m4
src/: resolve.c
